--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@git.coding.net:farwish/alcon.git"
+            "url": "https://github.com/farwish/alcon.git"
         },
         {
             "type": "vcs",
