--- a/app/xsconfig/article.ini
+++ b/app/xsconfig/article.ini
@@ -1,4 +1,4 @@
-project.name = answer
+project.name = article
 project.default_charset = utf-8
 server.index = 127.0.0.1:8383
 server.search = 127.0.0.1:8384
@@ -6,18 +6,18 @@ server.search = 127.0.0.1:8384
 [id]
 type = id
 
-[question_id]
-index = self
-type  = numeric
+[title]
+index = both
+type  = string
 
 [content]
 index = both
 type  = string
 tokenizer = full
 
-[answer_role_id]
-index = self
-type  = numeric
+[author]
+index = both
+type  = string
 
-[addtime]
+[create_time]
 type = numeric
